[tool.poetry]
name = "holochain-client"
version = "0.1.0"
description = "A Python client for the Holochain Conductor API"
authors = [
    "ThetaSinner <ThetaSinner@users.noreply.github.com>",
]
readme = "README.md"
license = "CAL 1.0"
keywords = ["holochain", "conductor-api"]
include = ["CHANGELOG.md"]

packages = [
    { include = "holochain_client" }
]

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.7"
websockets = "^12.0"
holochain-serialization = "^0.1.0"
cryptography = "^42.0.2"
ruff = "^0.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
